--- a/Pedroamur/ejerciciosconplantillas/index00.html
+++ b/Pedroamur/ejerciciosconplantillas/index00.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('fccartagenacb.jpg');
+  background-image: rsc='fccartagenacb.jpg';
   min-height: 100%;
   background-position: center;
   background-size: cover;
