--- a/Pedroamur/ejerciciosconplantillas/index00.html
+++ b/Pedroamur/ejerciciosconplantillas/index00.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
 <head>
 <title>W3.CSS Template</title>
@@ -35,4 +35,3 @@ body, html {height: 100%}
 
 </body>
 </html>
-
