--- a/Pedroamur/ejerciciosconplantillas/index01.html
+++ b/Pedroamur/ejerciciosconplantillas/index01.html
@@ -10,7 +10,7 @@ c<!DOCTYPE html>
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('imagenes/forestbridge.jpg');
+  background-image: url('imagenes/fccartagenacb.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
