--- a/Pedroamur/ejerciciosconplantillas/index.html
+++ b/Pedroamur/ejerciciosconplantillas/index.html
@@ -23,7 +23,7 @@ body, html {height: 100%}
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="https://www.w3schools.com/w3images/house5.jpg" alt="House" style="width:100%">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQS59zxFvTmiFskOZilEdesQVMmBjvN1lNgOIQQmT5abg&s.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
