--- a/Pedroamur/ejerciciosconplantillas/index.html
+++ b/Pedroamur/ejerciciosconplantillas/index.html
@@ -29,19 +29,19 @@ body, html {height: 100%}
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="https://www.w3schools.com/w3images/house2.jpg" alt="House" style="width:100%">
+        <img src="https://storage.compralaentrada.com/images/ogimages/fc%20cartagena%20cb.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="https://www.w3schools.com/w3images/house3.jpg" alt="House" style="width:100%">
+        <img src="https://www.fbrm.org/archivos/noticias/2098/zoom-foto-5060.jpg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="https://www.w3schools.com/w3images/house4.jpg" alt="House" style="width:100%">
+        <img src="https://www.cartagena.es/gestion/images/0/253226.jpg" alt="House" style="width:100%">
       </div>
     </div>
   </div>
