--- a/Pedroamur/ejerciciosconplantillas/index.html
+++ b/Pedroamur/ejerciciosconplantillas/index.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('fccartagenacb.jpg');
+  background-image: url('https://img.freepik.com/foto-gratis/fondo-oscuro-abstracto_1048-1920.jpg?size=338&ext=jpg&ga=GA1.1.1319243779.1711411200&semt=ais.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
