--- a/Pedroamur/ejerciciosconplantillas/index02.html
+++ b/Pedroamur/ejerciciosconplantillas/index02.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>F.C Cartagena CB</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('https://img.freepik.com/foto-gratis/fondo-oscuro-abstracto_1048-1920.jpg?size=338&ext=jpg&ga=GA1.1.1319243779.1711411200&semt=ais.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
+</head>
+<body>
 
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding"> </div>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQS59zxFvTmiFskOZilEdesQVMmBjvN1lNgOIQQmT5abg&s.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding"> </div>
+        <img src="https://storage.compralaentrada.com/images/ogimages/fc%20cartagena%20cb.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding"> </div>
+        <img src="https://www.fbrm.org/archivos/noticias/2098/zoom-foto-5060.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding"> </div>
+        <img src="https://www.cartagena.es/gestion/images/0/253226.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+  </div>
+
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    Logo
+  </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top"> F.C Cartagena CB</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center">Vamooooos</p>
+  </div>
+  <div class="w3-display-bottomleft">
+    <h1 class="w3-jumbo w3-animate-top"> F.C Cartagena CB</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center">Vamooooos</p>
+  </div>
+  <div class="w3-display-topright">
+    <h1 class="w3-jumbo w3-animate-top"> F.C Cartagena CB</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center">Vamooooos</p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+  </div>
+</div>
+
+</body>
+</html>
