--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -86,27 +86,19 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="/w3images/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>My Name</h4>
-      <p>Some text about me. I love taking photos of PEOPLE. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <p>El FC Cartagena CB es un equipo de baloncesto de la ciudad de Cartagena en la Región de Murcia perteneciente a la sección deportiva del equipo que milita en segunda división, el FC Cartagena.
+        Este equipo de baloncesto ha ascendido recientemente a liga Leb Oro que es equivalente a segunda división española de baloncesto, el pasado sábado 20 de abril de 2024 contra el Zamora.
       </p>
-      <p>mail: example@example.com</p>
-      <p>tel: 5353 35531</p>
+      <p>mail: info@futbolclubcartagena.com</p>
+      <p>Teléfono de contacto : +34 629 953 849</p>
+    
       <hr class="w3-opacity">
       <h4 class="w3-padding-16">Technical Skills</h4>
       <p class="w3-wide">Photography</p>
       <div class="w3-white">
         <div class="w3-container w3-padding-small w3-center w3-grey" style="width:95%">95%</div>
       </div>
-      <p class="w3-wide">Web Design</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:85%">85%</div>
-      </div>
-      <p class="w3-wide">Photoshop</p>
-      <div class="w3-white">
-        <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
-      </div>
-      <p><button class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-margin-bottom">Download Resume</button></p>
+     
       <hr class="w3-opacity">
 
       <h4 class="w3-padding-16">How much I charge</h4>
@@ -188,7 +180,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
             <span>Sed mattis nunc</span>
           </li>
           <li class="w3-padding-16 w3-hover-black">
-            <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
+            <img src="https://pbs.twimg.com/media/GLoXYnaXIAAABo6?format=jpg&name=large.jpg" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Ipsum</span><br>
             <span>Praes tinci sed</span>
           </li> 
