--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -85,7 +85,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h4><b>About Me</b></h4>
     <img src="/w3images/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
-      <h4>My Name</h4>
+      <h4> Sobre Nosotros</h4>
       <p>El FC Cartagena CB es un equipo de baloncesto de la ciudad de Cartagena en la Región de Murcia perteneciente a la sección deportiva del equipo que milita en segunda división, el FC Cartagena.
         Este equipo de baloncesto ha ascendido recientemente a liga Leb Oro que es equivalente a segunda división española de baloncesto, el pasado sábado 20 de abril de 2024 contra el Zamora.
       </p>
