--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -83,7 +83,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="/w3images/avatar_hat.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="https://www.fbrm.org/archivos/noticias/2098/zoom-foto-5060.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4> Sobre Nosotros</h4>
       <p>El FC Cartagena CB es un equipo de baloncesto de la ciudad de Cartagena en la Región de Murcia perteneciente a la sección deportiva del equipo que milita en segunda división, el FC Cartagena.
