--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -132,7 +132,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
             <span>Sed mattis nunc</span>
           </li>
           <li class="w3-padding-16 w3-hover-black">
-            <img src="https://pbs.twimg.com/media/GLoXYnaXIAAABo6?format=jpg&name=large.jpg" class="w3-left w3-margin-right" style="width:50px">
+            <img src="https://imagenes.heraldo.es/files/image_990_556/files/fp/uploads/imagenes/2022/10/08/nguessan-pivot-del-lobe-huesca-la-magia-machaca-el-aro-ante-el-cartagena.r_d.1769-1181.jpg" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Ipsum</span><br>
             <span>Praes tinci sed</span>
           </li> 
