--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -127,12 +127,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h3>BLOG POSTS</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
-            <img src="https://cadenaser.com/resizer/TFJrsn8ceSIH7vj4ZKXO09FeqFQ=/1200x1200/filters:format(jpg):quality(70)/cloudfront-eu-central-1.images.arcpublishing.com/prisaradio/24WUQII7ZBFWTCGF6CHDTHKM2Q.jpg" class="w3-left w3-margin-right" style="width:50px">
+            <img src="https://pbs.twimg.com/profile_images/1450001089387024384/GElVXVtp_400x400.jpg">
             <span class="w3-large">Lorem</span><br>
             <span>Sed mattis nunc</span>
           </li>
           <li class="w3-padding-16 w3-hover-black">
-            <img src="https://imagenes.heraldo.es/files/image_990_556/files/fp/uploads/imagenes/2022/10/08/nguessan-pivot-del-lobe-huesca-la-magia-machaca-el-aro-ante-el-cartagena.r_d.1769-1181.jpg" class="w3-left w3-margin-right" style="width:50px">
+            <img src="https://estaticos-cdn.prensaiberica.es/clip/f112c69d-19b1-4445-b144-1005906fbefa_16-9-discover-aspect-ratio_default_0.jpg" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Ipsum</span><br>
             <span>Praes tinci sed</span>
           </li> 
