--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -124,16 +124,16 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
     
       <div class="w3-third">
-        <h3>BLOG POSTS</h3>
+        <h3>Secciones deportivas</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
-            <img src="https://pbs.twimg.com/profile_images/1450001089387024384/GElVXVtp_400x400.jpg" class="w3-left w3-margin-right" style="width:100px">
-            <span class="w3-large">Lorem</span><br>
-            <span>Sed mattis nunc</span>
+            <img src="https://pbs.twimg.com/profile_images/1450001089387024384/GElVXVtp_400x400.jpg" class="w3-left w3-margin-right" style="width:200px">
+            <span class="w3-large">Nuestro escudo</span><br>
+          
           </li>
           <li class="w3-padding-16 w3-hover-black">
-            <img src="https://estaticos-cdn.prensaiberica.es/clip/f112c69d-19b1-4445-b144-1005906fbefa_16-9-discover-aspect-ratio_default_0.jpg" class="w3-left w3-margin-right" style="width:100px">
-            <span class="w3-large">Ipsum</span><br>
+            <img src="https://estaticos-cdn.prensaiberica.es/clip/f112c69d-19b1-4445-b144-1005906fbefa_16-9-discover-aspect-ratio_default_0.jpg" class="w3-left w3-margin-right" style="width:200px">
+            <span class="w3-large">Nuestras camisetas</span><br>
             <span>Praes tinci sed</span>
           </li> 
         </ul>
