--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -20,7 +20,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">IMAGENES</a> 
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">SOBRE NOSOTROS</a> 
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTo</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTO</a>
 </nav>
 
 <!-- Top menu on small screens -->
