--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -99,7 +99,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <p>En este apartado puedes contactar por nosotros para poder entrar en nuestra gran cantera. Pon tus datos, ven a probar y ¡a disfrutar!.</p>
       <form action="/action_page.php" target="_blank">
         <div class="w3-section">
-          <label>Name</label>
+          <label>Nombre</label>
           <input class="w3-input w3-border" type="text" name="Nombre" required>
         </div>
         <div class="w3-section">
@@ -107,7 +107,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <input class="w3-input w3-border" type="text" name="Email" required>
         </div>
         <div class="w3-section">
-          <label>Message</label>
+          <label>Mensaje</label>
           <input class="w3-input w3-border" type="text" name="Mensaje" required>
         </div>
         <button type="submit" class="w3-button w3-block w3-black w3-margin-bottom">Mandar mensaje</button>
