--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -104,7 +104,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
         <div class="w3-section">
           <label>Email</label>
-          <input class="w3-input w3-border" type="text" name="Email" required>
+          <input class="w3-input w3-border" type="text" name="Correo" required>
         </div>
         <div class="w3-section">
           <label>Mensaje</label>
@@ -119,12 +119,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <footer class="w3-container w3-padding-32 w3-grey">  
     <div class="w3-row-padding">
       <div class="w3-third">
-        <h3>INFO</h3>
+        <h3>INFORMACIÓN</h3>
         <p>.</p>      
       </div>
     
       <div class="w3-third">
-        <h3>Secciones deportivas</h3>
+        <h3>SECCIONES DEPORTIVAS</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
             <img src="https://pbs.twimg.com/profile_images/1450001089387024384/GElVXVtp_400x400.jpg" class="w3-left w3-margin-right" style="width:350px"><br>
