--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -127,8 +127,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h3>SECCIONES DEPORTIVAS</h3>
         <ul class="w3-ul">
           <li class="w3-padding-16 w3-hover-black">
-            <img src="https://pbs.twimg.com/profile_images/1450001089387024384/GElVXVtp_400x400.jpg" class="w3-left w3-margin-right" style="width:350px"><br>
-            <span class="w3-large">Nuestro escudo</span><br>
+            <br><img src="https://pbs.twimg.com/profile_images/1450001089387024384/GElVXVtp_400x400.jpg" class="w3-left w3-margin-right" style="width:350px"></br>
+            
+           <br><span class="w3-large">Nuestro escudo</span></br>
           
           </li>
           <li class="w3-padding-16 w3-hover-black">
