--- a/Pedroamur/ejerciciosconplantillas/index01.html
+++ b/Pedroamur/ejerciciosconplantillas/index01.html
@@ -29,7 +29,7 @@ body, html {height: 100%}
     <p class="w3-large w3-center">A por ellos!!</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+    Powered by <a href="Secundaria04.html" target="_blank">Secundaria</a>
   </div>
 </div>
 
