--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -43,7 +43,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-third">
       <img src="https://storage.compralaentrada.com/images/ogimages/fc%20cartagena%20cb.jpg" style="width:100%" onclick="onClick(this)" alt="Hazte socio de uno de los mejores equipos de la Región, FC Cartagena CB!!">
       <img src="https://media.orm.es/thumbnail/dHJRMlJHYXowPS5/874/491/c/ZnBBTmF2dUY2R0twVkllNG55Yy9lYXFqRnUvWVYxWjdlQ253ZmtrQ2RGaz0=/.jpg" style="width:100%" onclick="onClick(this)" alt="Nuestra Cantera" >
-      <img src="https://pbs.twimg.com/media/GLoXYnaXIAAABo6?format=jpg&name=large" width="400" height="300" onclick="onClick(this)">
+      <img src="https://pbs.twimg.com/media/GLoXYnaXIAAABo6?format=jpg&name=large" width="400" height="300" onclick="onClick(this)" alt="Ascenso histórico a Leb Oro, la segunda división del baloncesto español" >
     </div>
 
     <div class="w3-third">
