--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -47,9 +47,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
 
     <div class="w3-third">
-      <img src="https://pbs.twimg.com/media/GLoXYnaXIAAABo6?format=jpg&name=large.jpg"  onclick="onClick(this)">
+      <img src="https://www.cartagena.es/gestion/images/0/253226.jpg"  onclick="onClick(this)">
       <img src="https://www.latribunadealbacete.es/media/IMG/2021/99CCF55F-AE03-1167-20ADAA9EA8E0619F.jpg" style="width:100%" onclick="onClick(this)" alt="Mate para ganar el partido">
-      <img src="https://murciaplaza.com/public/Image/2022/7/SediqGaruba-FCCartagenaCB-Baloncesto_NoticiaAmpliada.jpg" width="400" height="400" onclick="onClick(this)"  alt="Fichaje estrella"/>
+      <img src="https://murciaplaza.com/public/Image/2022/7/SediqGaruba-FCCartagenaCB-Baloncesto_NoticiaAmpliada.jpg" width="400" height="200" onclick="onClick(this)"  alt="Fichaje estrella"/>
     </div>
     
     <div class="w3-third">
