--- a/paginaweb/fccartagenacb/index01.html
+++ b/paginaweb/fccartagenacb/index01.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<head>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="hojasdeestilo/style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('imagenes/white.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
+</head>
+<body>
 
-
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">THE BAND</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
-      </div>
-    </div>
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+ 
   </div>
-
+  <div class="w3-display-topmiddle">
+    <h1 class="w3-jumbo w3-animate-top">About us</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"></p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    
+  </div>
+</div>
+  <h1>Somos un grupo de amigos que estabamos aburridos de estudiar la carrera que teniamos, pensamos en una idea de negocio, algo que fuer original,
+    lo suficiente como para poder triunfar y poder vivir de esto.Se nos ocurrió zapas ready,
+    nuestar tienda online y ahora también física en la que puedes ir a visistar y conocer
+    las zapatillas mas unicas y dificiles de conseguir en todo el mundo.La primera tienda física la abrimos en 2014
+, al principio no tuvimos muy buena repercusión pero no nos ibamos a rendir tan facil.Poco a poco empezamos a abrir mas tiendas por España conforme ibamos creciendo como
+  empresa y ahora tratamos siempre de brindar el servicio mas comodo a los clientes que vengan a visistar 
+  nuestras tiendas.Nuestro plan es seguir ampliando nuesro negocio por el resto del mundo, siendo asi, una inspiracion para muchos.</h1>
+  <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+     <button class="w3-button w3black w3-padding-large w3-margin-bottom"><a href="secundaria04.html">siguiente página </a></button>
+  </footer>
   
 </body>
 </html>
-
