--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -110,7 +110,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <label>Mensaje</label>
           <input class="w3-input w3-border" type="text" name="Mensaje" required>
         </div>
-        <button type="submit" class="w3-button w3-block w3-black w3-margin-bottom">Mandar mensaje</button>
+        <button type="submit" class="https://pedroamur.github.io/Pedroamur/paginaweb/fccartagenacb/pag.html">Mandar mensaje</button>
       </form>
     </div>
   </div>
