--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -136,6 +136,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
             <img src="https://estaticos-cdn.prensaiberica.es/clip/f112c69d-19b1-4445-b144-1005906fbefa_16-9-discover-aspect-ratio_default_0.jpg" class="w3-left w3-margin-right" style="width:350px"><br>
         
             <span class="w3-large">Nuestras camisetas</span><br>
+            <div class="w3-display-bottomleft w3-padding-large">
+    Entra aquí <a href="pag.html" target="_blank">w3.css</a>
             
           </li> 
         </ul>
