--- a/paginaweb/fccartagenacb/pag.html
+++ b/paginaweb/fccartagenacb/pag.html
@@ -32,13 +32,8 @@ body, html {height: 100%}
     
   </div>
 </div>
-  <h1>Somos un grupo de amigos que estabamos aburridos de estudiar la carrera que teniamos, pensamos en una idea de negocio, algo que fuer original,
-    lo suficiente como para poder triunfar y poder vivir de esto.Se nos ocurrió zapas ready,
-    nuestar tienda online y ahora también física en la que puedes ir a visistar y conocer
-    las zapatillas mas unicas y dificiles de conseguir en todo el mundo.La primera tienda física la abrimos en 2014
-, al principio no tuvimos muy buena repercusión pero no nos ibamos a rendir tan facil.Poco a poco empezamos a abrir mas tiendas por España conforme ibamos creciendo como
-  empresa y ahora tratamos siempre de brindar el servicio mas comodo a los clientes que vengan a visistar 
-  nuestras tiendas.Nuestro plan es seguir ampliando nuesro negocio por el resto del mundo, siendo asi, una inspiracion para muchos.</h1>
+  <h1>En esta página te damos la bienvenida a nuestro club de Baloncesto, en breve te daremos los datos y más información para poder entrar a nuestra cantera. Somos una catera en crecimiento con muy buenas bases y con un cuerpo técnico de primera categoría.
+    Nuestro objetivo es el crecimiento personal con valores fundamentales de este deporte como el compañerismo y también queremos que el crecimiento físico y técnico de nuestros jugadores sea el adecuado. </h1>
   <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
      <button class="w3-button w3black w3-padding-large w3-margin-bottom"><a href="secundaria04.html">siguiente página </a></button>
   </footer>
