--- a/paginaweb/fccartagenacb/pagina.html
+++ b/paginaweb/fccartagenacb/pagina.html
@@ -24,9 +24,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="imagenes/zapasready.jpg" style="width:100%" alt="Avatar">
+          <img src="https://murciaeconomia.com/upload/images/09_2022/4166_1.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Zapas ready</h2>
+            
           </div>
         </div>
         <div class="w3-container">
@@ -51,7 +51,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
           </div>
-          <p>Extigencia</p>
+          <p>Exigencia</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
           </div>
@@ -116,7 +116,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Infantiles/b></h5>
+          <h5 class="w3-opacity"><b>Infantiles</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2011</h6>
           <p>Más info al correo electrónico</p><br>
         </div>
