--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -137,7 +137,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         
             <span class="w3-large">Nuestras camisetas</span><br>
             <div class="w3-display-bottomleft w3-padding-large">
-    Entra aquí <a href="pag.html" target="_blank">w3.css</a>
+    Entra aquí <a href="https://pedroamur.github.io/Pedroamur/paginaweb/fccartagenacb/pag.html" target="_blank">w3.css</a>
             
           </li> 
         </ul>
