--- a/paginaweb/fccartagenacb/pag.html
+++ b/paginaweb/fccartagenacb/pag.html
@@ -32,10 +32,15 @@ body, html {height: 100%}
     
   </div>
 </div>
-  <h1>En esta página te damos la bienvenida a nuestro club de Baloncesto, en breve te daremos los datos y más información para poder entrar a nuestra cantera. Somos una catera en crecimiento con muy buenas bases y con un cuerpo técnico de primera categoría.
-    Nuestro objetivo es el crecimiento personal con valores fundamentales de este deporte como el compañerismo y también queremos que el crecimiento físico y técnico de nuestros jugadores sea el adecuado. </h1>
+  <h1>Nuestra Cantera </h1>
+  <p En esta página te damos la bienvenida a nuestro club de Baloncesto, en breve te daremos los datos y más información para poder entrar a nuestra cantera. Somos una cantera en crecimiento con muy buenas bases y con un cuerpo técnico de primera categoría.
+    Nuestro objetivo es el crecimiento personal con valores fundamentales de este deporte como el compañerismo y también queremos que el crecimiento físico y técnico de nuestros jugadores sea el adecuado.>
+    <h2> Secciones deportivas</h2>
+    <p Este equipo es un apartado que tiene el FC Cartagena de tantas secciones deportivas que tiene. Aunque el equipo ya existía, el FC Cartagena sintió la necesidad de ayudar a los clubes deportivos de Cartagena, unos claros ejemplos han sido el FC Cartagena Algar Sur Menor que es el equipo de voley femenino, el Odilo FC Cartagena CB de baloncesto, el CAB de balonmano, el FC Cartagena de gimnasia rítmica y por último el FC Cartagena Esports.
+      Al FC Cartagena de Paco Belmonte le ha salido muy bien en la mayoría de los casos ya que desde que se vinculó el FC Cartagena al equipo de baloncesto, el Odilo ha ascendido dos veces y actualmente va a jugar en Leb Oro la segunda división del Baloncesto español. Pero también en el caso de la gimnasia rítmica han conseguido dos títulos de campeón de España y una medalla de bronce.
   <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
      <button class="w3-button w3black w3-padding-large w3-margin-bottom"><a href="secundaria04.html">siguiente página </a></button>
+    
   </footer>
   
 </body>
