--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -110,7 +110,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           <label>Mensaje</label>
           <input class="w3-input w3-border" type="text" name="Mensaje" required>
         </div>
-        <button onclick="onClick(this) type="submit" href="pagina.html">Mandar mensaje</button>
+        <a href="pagina.html">Mandar mensaje </a>
       </form>
     </div>
   </div>
