--- a/paginaweb/fccartagenacb/pag.html
+++ b/paginaweb/fccartagenacb/pag.html
@@ -24,7 +24,7 @@ body, html {height: 100%}
  
   </div>
   <div class="w3-display-topmiddle">
-    <h1 class="w3-jumbo w3-animate-top">About us</h1>
+    <h1 class="w3-jumbo w3-animate-top">Sobre nosotros</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center"></p>
   </div>
