--- a/paginaweb/fccartagenacb/pagina2.html
+++ b/paginaweb/fccartagenacb/pagina2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Información</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background-image: url('https://sevillafc.es/sites/default/files/news/image/FC-CARTAGENA2.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -24,7 +24,7 @@ body, html {height: 100%}
     Logo
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+    <h1 class="w3-jumbo w3-animate-top">Información</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">35 days left</p>
   </div>
