--- a/paginaweb/fccartagenacb/pagina.html
+++ b/paginaweb/fccartagenacb/pagina.html
@@ -139,7 +139,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Más sobre nosotros <a href="pag.html" target="_blank">pincha aquí</a></p>
+  <p>Más sobre nosotros <a href="pag.html" target="_blank">pincha aquí (plantilla)</a></p>
 </footer>
 
 </body>
