--- a/paginaweb/fccartagenacb/pagina2.html
+++ b/paginaweb/fccartagenacb/pagina2.html
@@ -21,7 +21,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-  <a href="https://pedroamur.github.io/Pedroamur/paginaweb/imagenes/abonados.jpg" target="_blank">Federación de Peñas</a>
+  <a href="https://pedroamur.github.io/Pedroamur/paginaweb/imagenes/abonados.jpg" target="_blank">Federación de Peñas (plantilla)</a>
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Información</h1>
