--- a/paginaweb/fccartagenacb/index.html
+++ b/paginaweb/fccartagenacb/index.html
@@ -119,7 +119,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <footer class="w3-container w3-padding-32 w3-grey">  
     <div class="w3-row-padding">
       <div class="w3-third">
-      <a href="pagina2.html" target="_blank"><h3>INFORMACIÓN</h3></a></p>   </a>
+      <a href="pagina2.html" target="_blank"><h3>INFORMACIÓN (plantilla)</h3></a></p>   </a>
         <p>.</p>      
       </div>
     
